vlib/v/checker/tests/var_eval_not_used.out
vlib/v/checker/tests/var_eval_not_used.vv:6:2: error: `c` evaluated but not used 
    4 | 
    5 | fn main() {
    6 |     c
      |     ^
    7 | }
